--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ body{
     margin: 0;
     padding: 0px;
 
-    background: white;
-    color: black;
+    background: black;
+    color: white;
 }
 
 .topbar{
