modified:   calendars/calendars.css 	modified:   calendars/march.html 	new file:   calendars/template.html 	modified:   contact.html 	new file:   css/contact.css 	modified:   css/events.css 	modified:   css/index.css 	new file:   css/members.css 	modified:   css/style.css 	modified:   events.html 	modified:   img/four1.jpg 	modified:   img/live-four.jpg 	new file:   img/livee.jpg 	modified:   index.html 	modified:   members.html

--- a/calendars/calendars.css
+++ b/calendars/calendars.css
@@ -2,16 +2,16 @@
 February 5, 2021*/
 
 body{
-    background: yellow;
+    background:white;
 }
 
 h1{
     display: block;
     width: 100%;
     text-align: center;
-    
-    font-size: 50px;
-    color: purple;
+    font-family: 'Train One', cursive;
+    font-size: 40px;
+    color: black;
 }
 
 
@@ -27,6 +27,7 @@ table{
 
 th {
     font-size: 30px;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 th, td{
