--- a/css/index.css
+++ b/css/index.css
@@ -37,3 +37,9 @@ body{
     text-align: center;
     font-size: 110px;
 }
+.center p{
+    text-align: center;
+    font-size: 50px;
+    font-family: 'Allura', cursive;
+
+}
