--- a/css/contact.css
+++ b/css/contact.css
@@ -1,27 +1,37 @@
 /*Noel Glamann
 March 10, 2021*/
 
-.bandcontact{
+.backdrop{
     display: block;
     width: 100%;
+}
+.backdrop img{
+    width: 100%;
+    opacity: 0.4;
+}
+
+.bandcontact{
+    display: block;
+    width: 80%;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background:rgba(132, 132, 132, 0.6);
 
 }
 
 .bandcontact .information {
-    display: 20%;
+    display: block;
+    width: 40%;
     padding: 5%;
     float: left;
-    margin: 10% 10%;
-    background:rgba(132, 132, 132, 0.7);
+    margin: 10% 0;
     font-size: 20px;
     line-height:200%;
 }
 .information h1{
     text-align: center;
     font-size:50px;
-}
-.bandcontact img{
-    width: 35%;
-    margin-left:10%;
-    margin-right:5%;
 }
