--- a/css/index.css
+++ b/css/index.css
@@ -1,45 +1,60 @@
 /*Noel Glamann
 February 5, 2021*/
 
-body{
-}
-
 .backimg{
     display: block;
     width: 100%;
 }
-
 .backimg img{
     width: 100%;
-    opacity: 0.5;
 }
-
 .pageheader{
     display: block;
     width: 100%;
-    position: relative;
-
     color: white;
 }
-
-.center{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    width: 100%;
-    transform: translate(-50%, -50%);
-}
-
 .center h1{
     width: 100%;
-    /*background-image: linear-gradient(black, #32165A, #32165A,#2B4195, black);*/
-
     text-align: center;
-    font-size: 110px;
 }
 .center p{
     text-align: center;
-    font-size: 50px;
     font-family: 'Allura', cursive;
 
+}
+@media only screen and (max-width: 480px){
+    .backimg{float: left;}
+    .backimg img{
+        opacity: 0.9;
+    }
+    .center{
+        display: block;
+        width: 100%;
+        float: left;
+    }.center h1{
+        text-align: center;
+        font-size: 70px;
+    }
+    .center p{
+        font-size: 30px;
+    
+    }
+}
+@media only screen and (min-width: 481px){
+    .backimg img{
+        opacity: 0.5;
+    }
+    .center{
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        width: 100%;
+        transform: translate(-50%, -50%);
+    }.center h1{
+        font-size: 110px;
+    }
+    .center p{
+        font-size: 50px;
+    
+    }
 }
